moving header image

--- a/source/_includes/custom/header.html
+++ b/source/_includes/custom/header.html
@@ -5,5 +5,5 @@
     <h2>{{ site.subtitle }}</h2>
   {% endif %}
   -->
-  {% img /source/images/wise-logo.jpg %}
+  {% img /images/wise-logo.jpg %}
 </hgroup>
