--- a/source/_includes/custom/header.html
+++ b/source/_includes/custom/header.html
@@ -5,5 +5,5 @@
     <h2>{{ site.subtitle }}</h2>
   {% endif %}
   -->
-  {% img /wise-site/images/wise-logo2.jpg %}
+  {% img /wise-site/images/wise-logo2.png %}
 </hgroup>
