--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -1,2 +1,12 @@
 // This File is imported last, and will override other styles in the cascade
 // Add styles here to make changes without digging in too much
+
+body > header {
+  font-size: .7em;
+  hgroup {
+    text-align: center;
+    position: relative;
+    padding: .5em 0;
+    margin: 0 auto;
+  }
+}
