--- a/source/_includes/custom/header.html
+++ b/source/_includes/custom/header.html
@@ -6,5 +6,5 @@
   {% endif %}
   -->
   {% img /wise-site/images/wise-logo2.png 366 158%}
-  {% img /wise-site/images/wise-logo3.png %}
+  {% img /wise-site/images/wise-logo3.png 366 25%}
 </hgroup>
