trying full image

--- a/source/_includes/custom/header.html
+++ b/source/_includes/custom/header.html
@@ -5,6 +5,5 @@
     <h2>{{ site.subtitle }}</h2>
   {% endif %}
   -->
-  {% img /wise-site/images/wise-logo2.png 366 158%}
-  {% img /wise-site/images/wise-logo3.png 366 25%}
+  {% img /wise-site/images/wise-logo4.png %}
 </hgroup>
