--- a/sass/custom/_colors.scss
+++ b/sass/custom/_colors.scss
@@ -2,18 +2,29 @@
 // To give it a try, uncomment some of the lines below rebuild your blog, and see how it works.
 // If you need a handy color picker try http://hslpicker.com
 
-$header-bg: #002d38;
-//$subtitle-color: lighten($header-bg, 58);
-$nav-bg: #383300;
-$nav-bg-front: image-url('noise.png');
-$nav-bg-back: linear-gradient(lighten($nav-bg, 8), $nav-bg, darken($nav-bg, 11));
-//$sidebar-bg: desaturate(#eceff5, 8);
-//$sidebar-link-color: saturate(#526f9a, 10);
-//$sidebar-link-color-hover: darken(#7ab662, 9);
-//$footer-bg: #ccc !default;
-//$footer-bg-front: image-url('noise.png');
-//$footer-bg-back: linear-gradient(lighten($footer-bg, 8), $footer-bg, darken($footer-bg, 11));
+$main-bg: #061423 !default;
+$page-bg: #061423 !default;
 
+//header
+$header-bg: #061423;
+$subtitle-color: lighten($header-bg, 58);
+$text-color: $subtitle-color !default;
+$text-color-light: lighten($subtitle-color, 20) !default;
+
+//nav
+$nav-bg: lighten(#404040, 30);
+//$nav-bg-front: image-url('noise.png');
+$nav-bg-back: lighten($nav-bg, 8), $nav-bg, darken($nav-bg, 11);
+
+//sidebar
+$sidebar-bg: $nav-bg;
+$sidebar-link-color: saturate(#526f9a, 10);
+$sidebar-link-color-hover: darken(#7ab662, 9);
+
+//footer
+$footer-bg: darken($nav-bg, 30);
+//$footer-bg-front: $nav-bg-front;
+$footer-bg-back: lighten($footer-bg, 8), $footer-bg, darken($footer-bg, 11);
 
 /* To use the light Solarized highlighting theme uncomment the following line */
 //$solarized: light;
