--- a/sass/custom/_colors.scss
+++ b/sass/custom/_colors.scss
@@ -2,17 +2,17 @@
 // To give it a try, uncomment some of the lines below rebuild your blog, and see how it works.
 // If you need a handy color picker try http://hslpicker.com
 
-$main-bg: #061423 !default;
-$page-bg: #061423 !default;
+$main-bg: #002b36 !default;
+$page-bg: #002b36 !default;
 
 //header
-$header-bg: #061423;
+$header-bg: #002b36;
 $subtitle-color: lighten($header-bg, 58);
 $text-color: $subtitle-color !default;
 $text-color-light: lighten($subtitle-color, 20) !default;
 
 //nav
-$nav-bg: lighten(#404040, 30);
+$nav-bg: lighten(#005266, 30);
 //$nav-bg-front: image-url('noise.png');
 $nav-bg-back: lighten($nav-bg, 8), $nav-bg, darken($nav-bg, 11);
 
