--- a/sass/custom/_colors.scss
+++ b/sass/custom/_colors.scss
@@ -13,6 +13,7 @@ $text-color-light: lighten($subtitle-color, 20) !default;
 
 //nav
 $nav-bg: lighten(#2c2817, 30);
+$nav-bg: lighten(#474539, 30);
 //$nav-bg-front: image-url('noise.png');
 $nav-bg-back: lighten($nav-bg, 8), $nav-bg, darken($nav-bg, 11);
 
