--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -1,8 +1,10 @@
 <ul class="main-navigation">
   <li><a href="{{ root_url }}/">Home</a></li>
-  <!-- When we get a blog, this will be useful
+  <!-- When we get a blog, this might be useful
   <li><a href="{{ root_url }}/blog">Blog</a></li>
   <li><a href="{{ root_url }}/blog/archives">Archives</a></li>
   -->
+  <li><a href="{{ root_url }}/leads/">WISE Leads</a></li>
+  <li><a href="{{ root_url }}/press/">In The News</a></li>
   <li><a href="https://www.facebook.com/groups/536204913172418/">Facebook</a></li>
 </ul>
