--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -5,6 +5,6 @@
   <li><a href="{{ root_url }}/blog/archives">Archives</a></li>
   -->
   <li><a href="{{ root_url }}/leads/">WISE Leads</a></li>
-  <li><a href="{{ root_url }}/press/">In The News</a></li>
+  <li><a href="{{ root_url }}/focus/">Focus Areas</a></li>
   <li><a href="https://www.facebook.com/groups/536204913172418/">Facebook</a></li>
 </ul>
