--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -6,5 +6,7 @@
   -->
   <li><a href="{{ root_url }}/leads/">WISE Leads</a></li>
   <li><a href="{{ root_url }}/focus/">Focus Areas</a></li>
+  <li><a href="{{ root_url }}/press/">In The News</a></li>
   <li><a href="https://www.facebook.com/groups/536204913172418/">Facebook</a></li>
+  <li><a href="{{ root_url }}/self/">About This Site</a></li>
 </ul>
