--- a/source/_includes/navigation.html
+++ b/source/_includes/navigation.html
@@ -1,8 +1,12 @@
+<!-- Unless anyone asks for it by name, I think it's safe to skip on RSS feeds
+
 <ul class="subscription" data-subscription="rss{% if site.subscribe_email %} email{% endif %}">
   <li><a href="{{ site.subscribe_rss }}" rel="subscribe-rss" title="subscribe via RSS">RSS</a></li>
   {% if site.subscribe_email %}
     <li><a href="{{ site.subscribe_email }}" rel="subscribe-email" title="subscribe via email">Email</a></li>
   {% endif %}
+-->
+<!-- Also Removing Search because of space
 </ul>
   {% if site.simple_search %}
 <form action="{{ site.simple_search }}" method="get">
@@ -12,4 +16,5 @@
   </fieldset>
 </form>
   {% endif %}
+-->
 {% include custom/navigation.html %}
