--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -4,9 +4,10 @@
   <li><a href="{{ root_url }}/blog">Blog</a></li>
   <li><a href="{{ root_url }}/blog/archives">Archives</a></li>
   -->
-  <li><a href="{{ root_url }}/leads/">WISE Leads</a></li>
-  <li><a href="{{ root_url }}/focus/">Focus Areas</a></li>
-  <li><a href="{{ root_url }}/press/">In The News</a></li>
+  <li><a href="{{ root_url }}/leads/">Leads</a></li>
+  <li><a href="{{ root_url }}/focus/">Focus</a></li>
+  <li><a href="{{ root_url }}/press/">News</a></li>
+  <li><a href="{{ root_url }}/events/">Events</a></li>
   <li><a href="https://www.facebook.com/groups/536204913172418/">Facebook</a></li>
-  <li><a href="{{ root_url }}/self/">About This Site</a></li>
+  <li><right><a href="{{ root_url }}/self/">About This Site</a><right></li>
 </ul>
