--- a/source/_includes/custom/footer.html
+++ b/source/_includes/custom/footer.html
@@ -1,4 +1,4 @@
 <p>
-Copyright &copy; {{ site.time | date: "%Y" }} - <a href="http://jrjurman.com/">{{ site.author }}</a> -
+Copyright &copy; {{ site.time | date: "%Y" }} - <a href="{{ root_url }}/self/">{{ site.author }}</a> -
   <span class="credit">Powered by <a href="http://octopress.org">Octopress</a></span>
 </p>
