--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -10,3 +10,18 @@ body > header {
     margin: 0 auto;
   }
 }
+
+article {
+  header {
+    padding-top: 0.4em;
+  }
+  header > h1 {
+    font-size: 2.6em;
+    text-align: center;
+    position: relative;
+    margin: 0 auto;
+  }
+  h1 {
+    font-size: 1.7em;
+  }
+}
